Clang port of std::vector

--- a/test/stdcpp/Makefile
+++ b/test/stdcpp/Makefile
@@ -9,7 +9,7 @@ OLDABITESTS:=
 
 ifeq (osx,$(OS))
 #	TESTS+=string
-#	TESTS+=vector
+	TESTS+=vector
 endif
 ifeq (linux,$(OS))
 #	TESTS+=string
@@ -18,7 +18,7 @@ ifeq (linux,$(OS))
 endif
 ifeq (freebsd,$(OS))
 	TESTS+=string
-#	TESTS+=vector
+	TESTS+=vector
 endif
 
 # some build machines have ancient compilers, so we need to disable C++17 tests
