Fix 20368 - Remove name conflict for `main` mixin
Use a unique name with override mangle s.t. it doesn't conflict with the
user-defined main.

Co-authored-by: JinShil <slavo5150@yahoo.com>
Co-authored-by: Ernesto Castellotti <erny.castell@gmail.com>
(see PR's 2861 and 2953)

--- a/test/init_fini/Makefile
+++ b/test/init_fini/Makefile
@@ -1,6 +1,6 @@
 include ../common.mak
 
-TESTS:=thread_join runtime_args test18996 custom_gc
+TESTS:=thread_join runtime_args test18996 custom_gc bug20368
 
 .PHONY: all clean
 all: $(addprefix $(ROOT)/,$(addsuffix .done,$(TESTS)))
