Enable demangling of C++ symbols in the stacktrace
This allows you to view demangled and pretty printed C++ symbols
in the stacktrace.
Is especially useful considering that D is getting more and more support for C++.

Now the C++ symbols in the stacktrace will be printed like this:
        test.d:7 [C++] Test<int>::SomeName(int, long, int) [0x55711efee36f]
        test.d:18 [C++] testcpp() [0x557228e17978]

Signed-off-by: Ernesto Castellotti <mail@ernestocastellotti.it>

--- a/test/gc/Makefile
+++ b/test/gc/Makefile
@@ -51,7 +51,7 @@ $(ROOT)/startbackgc: startbackgc.d
 	$(DMD) $(UDFLAGS) -of$@ sigmaskgc.d
 
 $(ROOT)/recoverfree: recoverfree.d
-	$(DMD) $(DFLAGS) -of$@ recoverfree.d
+	$(DMD) $(DFLAGS) -L-ldl -of$@ recoverfree.d
 
 $(ROOT)/nocollect: nocollect.d
 	$(DMD) $(DFLAGS) -of$@ nocollect.d
