Makefiles: Don't compile tests in test/exception with -release
Test code that ignores asserts is pretty pointless.

--- a/test/exceptions/Makefile
+++ b/test/exceptions/Makefile
@@ -1,5 +1,8 @@
 include ../common.mak
 
+# Strip -release s.t. the test code still checks assert's, ...
+DFLAGS := $(subst -release,,$(DFLAGS))
+
 TESTS=stderr_msg unittest_assert invalid_memory_operation unknown_gc static_dtor \
 	  future_message refcounted rt_trap_exceptions_drt catch_in_finally
 
