add hospital.d from the dmd test suite as an explicit test for the forking GC

--- a/test/gc/Makefile
+++ b/test/gc/Makefile
@@ -2,7 +2,7 @@ include ../common.mak
 
 TESTS := attributes sentinel sentinel1 sentinel2 printf memstomp invariant logging \
 		 precise precisegc forkgc forkgc2 \
-		 sigmaskgc startbackgc recoverfree nocollect
+		 sigmaskgc startbackgc recoverfree nocollect hospital
 
 SRC_GC = ../../src/core/internal/gc/impl/conservative/gc.d
 SRC = $(SRC_GC) ../../src/rt/lifetime.d
@@ -65,6 +65,10 @@ $(ROOT)/recoverfree: recoverfree.d
 
 $(ROOT)/nocollect: nocollect.d
 	$(DMD) $(DFLAGS) -of$@ nocollect.d
+
+$(ROOT)/hospital: hospital.d
+	$(DMD) $(DFLAGS) -d -of$@ hospital.d
+$(ROOT)/hospital.done: RUN_ARGS += --DRT-gcopt=fork:1
 
 clean:
 	rm -rf $(ROOT)
