core.stdc.string: Use copy constructor for GCC >= 5.1 strings
That's why we introduced it in the language, after all.

--- a/test/stdcpp/Makefile
+++ b/test/stdcpp/Makefile
@@ -9,13 +9,13 @@ OLDABITESTS:=
 
 ifeq (osx,$(OS))
 	TESTS11+=memory
-#	TESTS+=string
+	TESTS+=string
 #	TESTS+=vector
 endif
 ifeq (linux,$(OS))
 	TESTS11+=exception typeinfo
 	TESTS+=typeinfo
-#	TESTS+=string
+	TESTS+=string
 #	TESTS+=vector
 	OLDABITESTS+=string
 endif
